<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseImage"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/buttonCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:background="@drawable/bg_button"
        android:textColor="@android:color/white"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/buttonGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:background="@drawable/bg_button"
        android:textColor="@android:color/white" />

</LinearLayout>
