<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/bg_login"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_marginTop="55dp"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@drawable/logo_bg"
            android:padding="7dp"
            android:src="@drawable/icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/noto_sans_bold"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/input_bg"
            android:drawablePadding="15dp"
            android:ems="10"
            android:fontFamily="@font/noto_sans_bold"
            android:gravity="right"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:paddingTop="13dp"
            android:paddingRight="20dp"
            android:paddingBottom="13dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/input_bg"
            android:drawablePadding="15dp"
            android:ems="10"
            android:fontFamily="@font/noto_sans_bold"
            android:gravity="right"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingTop="13dp"
            android:paddingRight="20dp"
            android:paddingBottom="13dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/inputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/input_bg"
            android:drawablePadding="15dp"
            android:ems="10"
            android:fontFamily="@font/noto_sans_bold"
            android:gravity="right"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingTop="13dp"
            android:paddingRight="20dp"
            android:paddingBottom="13dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />


        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="241dp"
            android:layout_height="48dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/bg_button"
            android:fontFamily="sans-serif-black"
            android:text="@string/btnRegister"
            android:textColor="@color/white"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/haveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/moveToLogin"
            android:fontFamily="@font/noto_sans_bold"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_button"
            android:backgroundTint="#444285F4"
            android:drawableRight="@drawable/icon_google"
            android:drawablePadding="10dp"
            android:paddingLeft="15dp"
            android:paddingTop="8dp"
            android:paddingRight="15dp"
            android:paddingBottom="8dp"
            android:text="@string/googleSignUp"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
