<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="25"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:weightSum="12"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/bg_profile_page"
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/profile"
            android:textSize="26sp"
            android:gravity="center"
            android:layout_weight="1.5"
            android:shadowColor="@android:color/white"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="1"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_weight="6">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="H,1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:background="@color/black"
                        android:id="@+id/business_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/add_image"
                        android:contentDescription="@string/biz_image" />

                </FrameLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/select_image_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/editImage"
            android:layout_weight="1.5"
            android:background="@drawable/bg_button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:weightSum="13"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10dp"
        >

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:gravity="right"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/bizOwnerName"
            android:inputType="textPersonName"
            android:gravity="right"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/business_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/bizName"
            android:inputType="text"
            android:gravity="right"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>



    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/update"
        android:layout_weight="1.5"
        android:background="@drawable/bg_button"
        />

    </LinearLayout>


</LinearLayout>
