<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/cardview_shadow_start_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            >


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingRight="20dp">

                <TextView
                    android:id="@+id/business_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bizPrev"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/business_owner_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/bizOwnerPrev"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/business_image"
                android:layout_width="100dp"
                android:layout_height="100dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/openSentence"
            android:textSize="18sp"
            android:shadowColor="@color/black"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_marginTop="10dp"
            android:id="@+id/lottieAnimationView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_report"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/monthReport"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#484848"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:background="@drawable/bg_button"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.1" />

            <Button
                android:id="@+id/btnToday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/buttonText"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_button"
                />


        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
