<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#F5F5F5" >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:textDirection="rtl">

            <TextView
                android:id="@+id/timeTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/hour" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/name" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnOpenCamera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/uploadReceipt"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#00b33a"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:drawableLeft="@drawable/icon_add_phot"
                android:background="@drawable/bg_button"
                android:paddingRight="40dp"
                android:paddingLeft="20dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDeleteImg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/deleteReceipt"
                android:backgroundTint="#990000"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                android:drawableRight="@drawable/icon_delete"
                android:background="@drawable/bg_button"
                android:paddingRight="20dp"
                android:paddingLeft="40dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            >

            <FrameLayout
                android:layout_width="250dp"
                android:layout_height="350dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/imageDisplay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:background="@drawable/bg_queue"
                    android:contentDescription="@string/receiptImage" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/border_image_view" />

            </FrameLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnUploadImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:backgroundTint="#23201F"
                android:textSize="22sp"
                android:textColor="#FFFFFF"
                android:drawableRight="@drawable/icon_save"
                android:textStyle="bold"
                android:background="@drawable/bg_button"
                android:paddingRight="40dp"
                android:paddingLeft="45dp"
                android:drawablePadding="5dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnShareImage"
                android:layout_width="wrap_content"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/icon_share"
                android:text="@string/share"
                android:backgroundTint="#0073cc"
                android:textSize="14sp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:drawablePadding="5dp"
                android:background="@drawable/bg_button"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>


    </LinearLayout>

</ScrollView>
