<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/yearMonth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="2"
        >


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/monthReport"
            android:gravity="center"
            android:textSize="24sp"
            android:layout_weight="1"

            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/dateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_below="@id/yearMonth"

        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/monthInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/month"
            android:gravity="right"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:inputType="number"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/yearInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/year"
            android:gravity="right"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:inputType="number"
                android:textColorHint="#616161"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/dateLayout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </ScrollView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loadingAnimation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/business_report" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/shareImages"
        android:layout_width="wrap_content"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/icon_share"
        android:text="@string/share"
        android:backgroundTint="#0073cc"
        android:textSize="14sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_button"
        />



</RelativeLayout>
