<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/queueCardContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="5dp"
    app:cardCornerRadius="15dp"
    app:strokeWidth="2dp"
    app:strokeColor="@color/cPy"
    app:cardBackgroundColor="@color/queuesNoRecipts"
    android:layout_marginBottom="10dp">

    <LinearLayout
        android:id="@+id/btnDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        >
            <TextView
                android:id="@+id/queueCustomerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="12sp"

                />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clientName"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textAlignment="center"

            />


    </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            >
            <TextView
                android:id="@+id/queueHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="12sp"


                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/hour"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="12sp"
                />


        </LinearLayout>

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_delete"
            android:background="@drawable/bg_delete_btn"
            android:padding="2dp"
            android:contentDescription="@string/delbtn" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
